# homeassistant-hostaway

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  REUSE.toml  hacs.json  pyproject.toml
.aislop/: config.yml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: speckit.git.commit.agent.md  speckit.git.feature.agent.md  speckit.git.initialize.agent.md  speckit.git.remote.agent.md  speckit.git.validate.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md
.github/workflows/: autolabeler.yaml  build-test.yaml  codeql-analysis.yaml  release-drafter.yaml  release.yaml  semantic-pull-request.yaml  validate.yaml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
LICENSES/: Apache-2.0.txt
custom_components/hostaway/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
specs/001-hostaway-ha-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-reservation-sensor-refactor/: spec.md
specs/003-task-management-services/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-api-client-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-services-package-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-sensor-package-refactor/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: __init__.py  conftest.py  helpers.py  test_config_flow.py  test_coordinator.py  test_edge_cases.py  test_init.py  test_integration.py  test_placeholder.py  test_sensor.py  test_services.py
(+44 files in other folders)
